onEnter() tilføjet i logincontroller. ansvarlig.fxml tager pendingVagter.txt som input, fixet windows ikke kan resize.